# ontoweaver-vignette

./: README.md  import.report  pyproject.toml  vignette.ipynb  vignette_decider_genetics.ipynb  vignette_jobim.html  vignette_jobim.ipynb
config/: biocypher_config.yaml  schema_config_1.yaml  schema_config_1_solve_inverse_property.yaml  schema_config_2.yaml  schema_config_3.yaml
data/: synthetic_clinical.csv
data/jobim_subsets/1_Simple_mapping/: snv_subset_1.csv
data/jobim_subsets/2_Properties/: snv_subset_2.csv
data/jobim_subsets/3_Multiple_databases/: snv_subset_3.csv  treatments_subset.csv
data/jobim_subsets/4_Fusion/: cna_subset.csv  treatments_subset.csv
decider_genetics/adapters/: my_mapping_1_variants.yaml  my_mapping_1_variants_solve_inverse_property_patients.yaml  my_mapping_1_variants_solve_inverse_property_variants.yaml  my_mapping_2_clinical.yaml  my_mapping_2_variants.yaml  my_mapping_3_clinical.yaml  my_mapping_3_cna.yaml  my_mapping_3_variants.yaml
jobim/1_Simple_mapping/: biocypher_config.yaml  biocypher_schema.yaml  snv.yaml
jobim/2_Properties/: biocypher_schema.yaml  biocypher_schema_metadata.yaml  snv_metadata.yaml
jobim/3_Multiple_databases/: biocypher_schema.yaml  cna.yaml  oncokb.yaml  snv.yaml
jobim/4_Fusion/: biocypher_config.yaml  biocypher_schema.yaml  cna.yaml  oncokb.yaml  snv.yaml
