[tool.poetry]
name = "ontoweaver-vignette"
version = "0.0.1"
description = "OntoWeaver Vignette."
authors = ["Emanuele Quaglio <emanuele.quaglio@pasteur.fr>", "Matthieu Najm <matthieu.najm@pasteur.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
biocypher = "^0.9.6"
ontoweaver = "^0.2.3"
pandas = "^2.0.1"
notebook = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx_rtd_theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"